Add first draft intro; include likely author list based on planned content

--- a/content/00.front-matter.md
+++ b/content/00.front-matter.md
@@ -32,13 +32,13 @@ on {{manubot.date}}.
 {{author.name}}<sup>{{author.affiliation_numbers | join(',')}}{%- if author.symbol_str is defined -%},{{author.symbol_str}}{%- endif -%}</sup>
 {%- if not loop.last -%}, {%- endif -%}
 {% endfor %}
-
-<sup>†</sup> --- To whom correspondence should be addressed: 
-
 <small>
-
 {% for affiliation in manubot.affiliations %}
 {{affiliation.affiliation_number}}. {{affiliation.affiliation}}
 {%- endfor %}
-
 </small>
+
+
+<sup>†</sup> To whom correspondence should be addressed:
+
+<sup>\*</sup> Current author order and contributions may change as manuscript in finalized.
