--- a/content/04.discussion.md
+++ b/content/04.discussion.md
@@ -1,1 +1,3 @@
 ## Discussion
+
+We hope that this tool will bring a new perspective to users' data and help draw the connections needed to aid them in extracting new and exciting hypotheses from their data that would be difficult to do without this tool.
