--- a/content/03.results.md
+++ b/content/03.results.md
@@ -1,1 +1,30 @@
 ## Results
+
+### Metaboverse is a dynamic, user-friendly tool for the exploration of high-throughput biological data in organism-specific pathways
+
+
+Figure 2. Overview
+
+### Data vignettes
+What does Metaboverse help find or speed up compared to standard analysis?    
+i.e. Volcano plot vs motif search
+
+##### 1. Static (Ian)
+
+Figure 3. Data    
+Supp Table 1. Motif results
+
+##### 2. Time-course (Yeyun)
+
+Figure 4. Data     
+Supp Table 2. Motif results
+
+##### 3. Flux data (Cameron)
+
+Figure 5. Data     
+Supp Table 3. Motif results
+
+### Performance
+
+Table 1. Performance break-down    
+Table 2. Comparison to existing tools
