--- a/content/05.methods.md
+++ b/content/05.methods.md
@@ -1,1 +1,43 @@
 ## Methods
+
+### 1. Network Curation
+
+
+### 2. Data overlay and broadcasting for missing entities
+
+
+### 3. Collapsing reactions with missing expression or abundance user data
+
+
+### 4. Regulatory pattern (motif) searches
+
+
+### 5. Nearest neighborhood searches
+
+
+### 6. Network visualization and exploration
+##### 6.1 Visualizing pathways and super-pathways
+
+##### 6.2 Visualizing compartments
+
+##### 6.3 Data scaling and interpretation
+
+##### 6.4 Dynamic network plotting
+
+##### 6.5 Annotation
+
+##### 6.6 Additional features
+
+
+### 7. Packaging
+##### 7.1 Framework
+
+##### 7.2 Documentation and Test Cases
+
+
+### 8. Validation using biological data
+##### 8.1 Curation of existing datasets
+
+##### 8.2 New datasets
+
+##### 8.3 Analysis and data visualization
