--- a/content/07.contributions.md
+++ b/content/07.contributions.md
@@ -3,16 +3,16 @@
 * Conceptualization: J.A.B., T.C.W., B.W., J.R.
 * Supervision: J.A.B., B.W., J.R.
 * Project Administration: J.A.B.
-* Investigation: J.A.B., T.C.W., A.J.B., Y.O., T.V.
-* Formal Analysis: J.A.B., A.J.B., Y.O., I.G.
+* Investigation: J.A.B., T.C.W., Y.O., T.V.
+* Formal Analysis: J.A.B., Y.O., I.G.
 * Software: J.A.B., Y.Z.
 * Methodology: J.A.B., Y.Z.
-* Validation: J.A.B., T.C.W., A.J.B., Y.O., I.G.
-* Data Curation: J.A.B., Y.Z., T.C.W., A.J.B., Y.O., T.V.
+* Validation: J.A.B., T.C.W., Y.O., I.G.
+* Data Curation: J.A.B., Y.Z., T.C.W., Y.O., T.V.
 * Resources: J.A.B., J.C., B.W., J.R.
 * Funding Acquisition: J.A.B., J.C., B.W., J.R.
 * Writing - Original Draft Preparation: J.A.B.
-* Writing - Review & Editing: J.A.B., Y.Z., T.C.W., A.J.B., Y.O., T.V., J.C., B.W., J.R.
+* Writing - Review & Editing: J.A.B., Y.Z., T.C.W., Y.O., T.V., J.C., B.W., J.R.
 * Visualization: J.A.B., Y.Z., Y.O., I.G.
 
 ![
