--- a/content/06.acknowledgements.md
+++ b/content/06.acknowledgements.md
@@ -1,1 +1,3 @@
 ## Acknowledgements
+
+We thank Alex J. Bott, Ahmad A. Cluntun, Kevin Hicks, and other members of the Rutter lab for their thoughtful insights and suggestions. 
