--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -1,3 +1,3 @@
 ## Abstract {.page_break_before}
 
-Metabolism is a complex network of metabolic reaction; however, scientists have had to use a largely reductionist approach to understanding these systems. While previously necessary due to technological limitations, current computer age technological advances allow us to survey, model, and explore the biological details of individual cells and populations of cells. Yet, our ability to contextualize and extract the full extent of these enormous datasets continues to lag and often results in focusing on only a handful of entities from a dataset. We present Metaboverse, a multi-omic computational analysis framework and application for the automated extraction of regulatory events, patterns, and trends from user data within the metabolic network and interactive visualization of the data. This framework will be foundational in increasing our ability to holistically understand static and temporal metabolic events and shifts and gene-metabolite intra-cooperativity, as well as ensure we obtain the maximum amount of information from our data. Metaboverse if freely available under a GPL-3.0 license at [https://github.com/Metaboverse/](https://github.com/Metaboverse/).
+Science has utilized a largely reductionist approach to understanding metabolic systems in the past. While such an approach was previously necessary due to technological limitations, current computer age technological advances paired with -omics experiments allow for the survey, modeling, and exploration the biological systems in detail. Yet, our ability to contextualize and extract the full extent of these enormous datasets continues to lag and often results in focusing on limited entities from a dataset. To address these challenges, we developed Metaboverse, a multi-omic computational analysis framework and application for the interactive exploration and automated extraction of potential regulatory events, patterns, and trends from user data within the context of the metabolic network. This framework will be foundational in increasing our ability to holistically understand static and temporal metabolic events and shifts and gene-metabolite intra-cooperativity, as well as ensure we obtain the maximum amount of information from our data. Metaboverse if freely available under a GPL-3.0 license at [https://github.com/Metaboverse/](https://github.com/Metaboverse/).
